# Kube

./: .gitignore  .gitmodules  CMakeLists.txt  CppGuideline.md  GUIDELINE.md  Install.cmake  KubeConfig.cmake.in  Makefile  README.md  buildWindows.ps1
CompileOptions/: CompileOptions.cmake  ToolchainOptions.cmake  Utils.cmake
Kube/: CMakeLists.txt
Kube/Audio/: Base.hpp  CMakeLists.txt  Device.cpp  Device.hpp  Input.cpp  Input.hpp  Manager.cpp  Manager.hpp  Output.cpp  Output.hpp  README.md
Kube/Audio/Benchmarks/: CMakeLists.txt  bench_Dummy.cpp
Kube/Audio/Tests/: CMakeLists.txt  tests_Manager.cpp
Kube/Core/: Abort.hpp  AllocatedFlatString.hpp  AllocatedFlatVector.hpp  AllocatedFlatVectorBase.hpp  AllocatedFlatVectorBase.ipp  AllocatedSmallString.hpp  AllocatedSmallVector.hpp  AllocatedSmallVectorBase.hpp  AllocatedSmallVectorBase.ipp  AllocatedString.hpp  AllocatedVector.hpp  AllocatedVectorBase.hpp  AllocatorUtils.hpp  AllocatorUtils.ipp  Assert.hpp  Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  Debug.hpp  DebugAllocator.hpp  Dispatcher.hpp  DispatcherDetails.hpp  DispatcherSlot.hpp  DispatcherSlot.ipp  Expected.hpp  FixedString.hpp  FixedString.ipp  FlatString.hpp  FlatVector.hpp  FlatVectorBase.hpp  FlatVectorBase.ipp  FunctionDecomposer.hpp  Functor.hpp  FunctorUtils.hpp  Hash.hpp  HeapArray.hpp  HeapArray.ipp  IAllocator.hpp  Log.cpp  Log.hpp  (+65 more)
Kube/Core/Benchmarks/: CMakeLists.txt  bench_Allocator.cpp  bench_MPMCQueue.cpp  bench_SPSCQueue.cpp
Kube/Core/Tests/: CMakeLists.txt  tests_Allocator.cpp  tests_Benchmark.cpp  tests_Dispatcher.cpp  tests_Expected.cpp  tests_FixedString.cpp  tests_Functor.cpp  tests_HeapArray.cpp  tests_Log.cpp  tests_MPMCQueue.cpp  tests_MPSCQueue.cpp  tests_Random.cpp  tests_RemovableDispatcher.cpp  tests_SPMCQueue.cpp  tests_SPSCQueue.cpp  tests_SharedPtr.cpp  tests_SortedVector.cpp  tests_SparseSet.cpp  tests_StaticAllocator.cpp  tests_String.cpp  tests_TaggedPtr.cpp  tests_TrivialFunctor.cpp  tests_Unicode.cpp  tests_UniquePtr.cpp  tests_Utils.cpp  tests_Vector.cpp
Kube/ECS/: ASystem.cpp  ASystem.hpp  Base.hpp  CMakeLists.txt  ComponentTable.hpp  ComponentTable.ipp  Executor.cpp  Executor.hpp  Executor.ipp  Pipeline.hpp  PipelineEvent.hpp  README.md  StableComponentTable.hpp  StableComponentTable.ipp  System.hpp  System.ipp
Kube/ECS/Benchmarks/: CMakeLists.txt  bench_Dummy.cpp
Kube/ECS/Tests/: CMakeLists.txt  tests_ComponentTable.cpp  tests_Executor.cpp  tests_System.cpp
Kube/Flow/: Base.cpp  Base.hpp  CMakeLists.txt  Graph.cpp  Graph.hpp  Graph.ipp  README.md  Scheduler.cpp  Scheduler.hpp  Task.cpp  Task.hpp  Task.ipp
Kube/Flow/Benchmarks/: CMakeLists.txt  bench_Dummy.cpp
Kube/Flow/Tests/: CMakeLists.txt  tests_Scheduler.cpp
Kube/GPU/: AttachmentDescription.hpp  AttachmentReference.hpp  Base.cpp  Base.hpp  Base.ipp  Buffer.cpp  Buffer.hpp  BufferCopy.hpp  BufferImageCopy.hpp  BufferModel.hpp  BufferModel.ipp  CMakeLists.txt  ColorBlendAttachement.hpp  ColorBlendModel.hpp  CommandDispatcher.cpp  CommandDispatcher.hpp  CommandDispatcher.ipp  CommandInheritanceInfo.hpp  CommandPool.cpp  CommandPool.hpp  CommandPool.ipp  CommandRecorder.hpp  CommandRecorder.ipp  ComponentMapping.hpp  ComputePipelineModel.hpp  DepthStencilModel.hpp  DescriptorBufferInfo.hpp  DescriptorImageInfo.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorPoolModel.hpp  DescriptorPoolSize.hpp  DescriptorSetCopyModel.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSetLayoutBinding.hpp  DescriptorSetLayoutBindingFlagsModel.hpp  DescriptorSetLayoutModel.hpp  DescriptorSetUpdate.cpp  DescriptorSetUpdate.hpp  (+88 more)
Kube/GPU/Benchmarks/: CMakeLists.txt  bench_Dummy.cpp
Kube/GPU/Tests/: CMakeLists.txt  GPUTestUtils.hpp  tests_GPU.cpp  tests_MemoryAllocation.cpp
Kube/IO/: Base.hpp  CMakeLists.txt  File.cpp  File.hpp  File.ipp  ResourceManager.cpp  ResourceManager.hpp  StandardPaths.hpp  StandardPaths.ipp
Kube/IO/Benchmarks/: CMakeLists.txt  bench_Dummy.cpp
Kube/IO/Tests/: CMakeLists.txt  FileTest01.txt  tests_File.cpp  tests_StandardPaths.cpp
Kube/UI/: Animator.cpp  Animator.hpp  App.cpp  App.hpp  Base.cpp  Base.hpp  Components.hpp  EventSystem.cpp  EventSystem.hpp  Font.cpp  Font.hpp  FontManager.cpp  FontManager.hpp  Item.cpp  Item.hpp  LayoutBuilder.cpp  MouseFilter.cpp  Sprite.hpp  SpriteManager.cpp  TextProcessor.cpp  TextProcessor.hpp  UISystem.cpp  UISystem.hpp
Kube/UI/Shaders/CubicBezier/: CubicBezier.comp
