find_package(SDL2 REQUIRED)

kube_add_library(GPU
    SOURCES
        AttachmentDescription.hpp
        AttachmentReference.hpp
        Base.cpp
        Base.hpp
        Base.ipp
        Buffer.cpp
        Buffer.hpp
        BufferCopy.hpp
        BufferImageCopy.hpp
        BufferModel.hpp
        BufferModel.ipp
        ColorBlendAttachement.hpp
        ColorBlendModel.hpp
        CommandDispatcher.cpp
        CommandDispatcher.hpp
        CommandDispatcher.ipp
        CommandInheritanceInfo.hpp
        CommandPool.cpp
        CommandPool.hpp
        CommandPool.ipp
        CommandRecorder.hpp
        CommandRecorder.ipp
        ComponentMapping.hpp
        ComputePipelineModel.hpp
        DepthStencilModel.hpp
        DescriptorBufferInfo.hpp
        DescriptorImageInfo.hpp
        DescriptorPool.cpp
        DescriptorPool.hpp
        DescriptorPoolModel.hpp
        DescriptorPoolSize.hpp
        DescriptorSetCopyModel.hpp
        DescriptorSetLayout.cpp
        DescriptorSetLayout.hpp
        DescriptorSetLayoutBinding.hpp
        DescriptorSetLayoutBindingFlagsModel.hpp
        DescriptorSetLayoutModel.hpp
        DescriptorSetUpdate.cpp
        DescriptorSetUpdate.hpp
        DescriptorSetWriteModel.hpp
        DynamicStateModel.hpp
        Event.cpp
        Event.hpp
        Fence.cpp
        Fence.hpp
        Framebuffer.cpp
        Framebuffer.hpp
        FramebufferManager.cpp
        FramebufferManager.hpp
        FramebufferModel.hpp
        FrameImageManager.cpp
        FrameImageManager.hpp
        FrameImageModel.hpp
        GPU.cpp
        GPU.hpp
        GPUObject.cpp
        GPUObject.hpp
        GraphicPipelineModel.hpp
        Handle.hpp
        Image.cpp
        Image.hpp
        ImageModel.hpp
        ImageModel.ipp
        ImageSubresourceLayers.hpp
        ImageView.cpp
        ImageView.hpp
        ImageViewModel.hpp
        InputAssemblyModel.hpp
        Instance.cpp
        Instance.hpp
        LogicalDevice.cpp
        LogicalDevice.hpp
        MemoryAllocation.cpp
        MemoryAllocation.hpp
        MemoryAllocation.ipp
        MemoryAllocationModel.hpp
        MemoryAllocationModel.ipp
        MemoryAllocator.cpp
        MemoryAllocator.hpp
        MemoryAllocator.ipp
        MemoryBarrier.hpp
        MultisampleModel.hpp
        PerFrameCache.hpp
        PerFrameCache.ipp
        PhysicalDevice.cpp
        PhysicalDevice.hpp
        Pipeline.cpp
        Pipeline.hpp
        PipelineLayout.cpp
        PipelineLayout.hpp
        PipelineLayoutModel.hpp
        PushConstantRange.hpp
        QueueManager.cpp
        QueueManager.hpp
        RasterizationModel.hpp
        RenderPass.cpp
        RenderPass.hpp
        RenderPassBeginInfo.hpp
        RenderPassManager.cpp
        RenderPassManager.hpp
        RenderPassModel.hpp
        Sampler.cpp
        Sampler.hpp
        SamplerModel.hpp
        Semaphore.cpp
        Semaphore.hpp
        Shader.cpp
        Shader.hpp
        ShaderStageModel.hpp
        SpecializationInfo.hpp
        SpecializationMapEntry.hpp
        StencilOpState.hpp
        SubmitInfo.hpp
        SubpassDescription.hpp
        SubpassDependency.hpp
        Surface.cpp
        Surface.hpp
        Swapchain.cpp
        Swapchain.hpp
        TessellationModel.hpp
        VertexInputAttribute.hpp
        VertexInputBinding.hpp
        VertexInputModel.hpp
        ViewportModel.hpp
        VMA.hpp

    LIBRARIES
        IO
        VulkanCollection
        SDL2::SDL2

    INCLUDES
        ${SDL2_INCLUDE_DIR}/..
)